TRUS-1254| Fix spacing inbetween long names and other elements

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,12 +28,19 @@ body:not(.js-enabled) {
     overflow-wrap: break-word;
 }
 
+@include govuk-media-query($from: tablet) {
+    .hmrc-add-to-a-list__identifier {
+        padding-right: 15px;
+    }
+}
+
 @include govuk-media-query($until: desktop) {
   .hmrc-add-to-a-list__identifier__second {
     position: absolute;
     top: inherit;
     left: 0;
   }
+
 }
 
 p {
